<resources>
    <string name="app_name">Conduit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">App Using MVVM</string>
    <string name="nav_header_subtitle">sunil.sharma533@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_global_feed">Global Feed</string>
    <string name="menu_my_feed">My Feed</string>
    <string name="menu_auth">Login / Signup</string>
<!--    <string name="email">Email</string>-->
<!--    <string name="password">Password</string>-->
    <string name="submit">Submit</string>
    <string name="url_of_profile_image">URL of profile image</string>
    <string name="user_name">User Name</string>
    <string name="short_bio">Short Bio</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="update_settings">Update Settings</string>
    <string name="arg_article_id">ARTICLE_ID</string>
</resources>